--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "19.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "typescript": "5.9.3"
   }
 }
